# sombrero

./: README.md  pyproject.toml
src/sombrero/: __init__.py  cli.py
src/sombrero/greyscale/: __init__.py  _common.py  _interpolate.py  _repair.py  _visualize.py
